--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,3 @@
-# editorconfig.org
-
 root = true
 
 [*]
@@ -9,6 +7,9 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
 
 [*.php]
 indent_size = 4
