--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acf-field-boilerplate",
   "version": "1.0.2",
-  "author": "Brandon Nifong <log1x@log1x.com>",
+  "author": "Brandon Nifong <brandon@tendency.me>",
   "homepage": "https://github.com/Log1x/acf-field-boilerplate",
   "private": true,
   "repository": {
