--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
   "authors": [
     {
       "name": "Brandon Nifong",
-      "email": "log1x@log1x.com",
+      "email": "brandon@tendency.me",
       "homepage": "https://log1x.com"
     }
   ],
   "keywords": [
-    "wordpress"
+    "wordpress",
+    "acf"
   ],
   "support": {
     "issues": "https://github.com/log1x/acf-field-boilerplate/issues"
