--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,21 @@
 {
   "name": "log1x/acf-field-boilerplate",
   "type": "wordpress-plugin",
-  "license": "MIT",
-  "description": "A simple ACF field boilerplate with clean syntax.",
-  "homepage": "https://github.com/log1x/acf-field-boilerplate",
-  "authors": [
-    {
-      "name": "Brandon Nifong",
-      "email": "brandon@tendency.me",
-      "homepage": "https://log1x.com"
-    }
-  ],
+  "description": "A better ACF Field Boilerplate.",
   "keywords": [
     "wordpress",
     "acf"
   ],
-  "support": {
-    "issues": "https://github.com/log1x/acf-field-boilerplate/issues"
-  },
+  "license": "MIT",
   "require": {
     "php": ">=7",
     "composer/installers": "~1.0"
   },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "2.*"
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
   },
-  "scripts": {
-    "test": [
-      "vendor/bin/phpcs --extensions=php --ignore=vendor/ ."
-    ]
-  }
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
