--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "wordpress",
     "acf"
   ],
-  "license": "MIT",
   "require": {
-    "php": ">=7",
-    "composer/installers": "~1.0"
+    "php": ">=7.1.3",
+    "composer/installers": "~1.0",
+    "pragmarx/ia-str": "^5.8",
+    "roots/support": "dev-master"
   },
   "config": {
     "optimize-autoloader": true,
