--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "log1x/acf-field-boilerplate",
   "type": "wordpress-plugin",
-  "description": "A better ACF Field Boilerplate.",
+  "description": "A better way to create ACF Fields.",
   "keywords": [
     "wordpress",
     "acf"
@@ -10,6 +10,19 @@
     "php": ">=7.1.3",
     "composer/installers": "~1.0",
     "roots/support": "dev-master"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.4"
+  },
+  "autoload": {
+    "files": [
+      "src/FieldLoader.php"
+    ]
+  },
+  "scripts": {
+    "lint": [
+      "phpcs --ignore=vendor --exclude=PSR1.Methods.CamelCapsMethodName --extensions=php --standard=PSR12 ."
+    ]
   },
   "config": {
     "optimize-autoloader": true,
