--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,24 @@
 {
   "name": "log1x/acf-field-boilerplate",
   "type": "wordpress-plugin",
-  "description": "A better way to create ACF Fields.",
+  "description": "A modernized starting point for custom ACF field types.",
   "keywords": [
+    "acf",
+    "acf-field",
     "wordpress",
-    "acf"
+    "wordpress-plugin"
   ],
   "require": {
-    "php": ">=7.1.3",
-    "composer/installers": "~1.0",
-    "roots/support": "dev-master"
+    "php": ">=7.2",
+    "composer/installers": "~1.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.4"
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "autoload": {
-    "files": [
-      "src/FieldLoader.php"
-    ]
+    "psr-4": {
+      "Log1x\\AcfFieldBoilerplate\\": "src/"
+    }
   },
   "scripts": {
     "lint": [
