--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
     "start": "cross-env NODE_ENV=development npm run build --watch",
     "build": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "build:production": "npm run -s clean && cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "clean": "npm run -s clean:dist",
-    "clean:dist": "rimraf dist"
+    "clean": "rimraf public"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
-    "laravel-mix": "^5.0.5",
+    "autoprefixer": "^10.0.4",
+    "cross-env": "^7.0.3",
+    "laravel-mix": "^5.0.9",
+    "postcss": "^8.1.10",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^8.0.2",
-    "tailwindcss": "^1.7.3",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "tailwindcss": "^2.0.1",
     "vue-template-compiler": "^2.6.12"
   },
-  "dependencies": {
-    "jquery": "^3.5.1"
-  }
+  "dependencies": {}
 }
