--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "build:production": "mix --production"
   },
   "devDependencies": {
-    "laravel-mix": "^6.0.11",
-    "postcss": "^8.1",
-    "sass": "^1.32.7",
-    "sass-loader": "8.*",
-    "tailwindcss": "^2.0.3"
+    "laravel-mix": "^6.0.29",
+    "postcss": "^8.3.6",
+    "sass": "^1.39.0",
+    "sass-loader": "12.1.0",
+    "tailwindcss": "^2.2.9"
   },
   "dependencies": {}
 }
